--- a/client/src/app/App.css
+++ b/client/src/app/App.css
@@ -2,7 +2,6 @@
   width: 100vw;
   min-height: 100vh;
   margin: 0 auto;
-
   text-align: center;
 }
 
@@ -13,9 +12,14 @@
 }
 
 .main-loader{
-  width: 100vw;
-  height: 100vw;
   display: flex;
   align-items: center;
   justify-content: center;
 }
+
+body {
+  background-image: url('../../public/img/header-background_webp.webp');
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
