--- a/client/src/ui/Loader/Loader.css
+++ b/client/src/ui/Loader/Loader.css
@@ -57,3 +57,11 @@
     transform: translate(24px, 0);
   }
 }
+
+.loader-wrapper {
+  width: 100vw;
+  height: 100vw;
+background-color: white;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
