--- a/client/src/page/auth/authorization.css
+++ b/client/src/page/auth/authorization.css
@@ -7,4 +7,31 @@
     border: none;
     border-radius: 4px;
     cursor: pointer;
+    align-items: center;
+    justify-content: center;
 }
+
+.authorization-page-text {
+    color: rgb(24, 224, 217);
+}
+
+.authorization-label {
+    display: block;
+    margin-bottom: 0.25rem;
+  }
+  
+  .authorization-input {
+    display: block;
+    width: 100%;
+    height: calc(2.25rem + 2px);
+    font-family: inherit;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #212529;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid #bdbdbd;
+    border-radius: 0.25rem;
+    transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+  }
