--- a/client/src/page/auth/authorization.css
+++ b/client/src/page/auth/authorization.css
@@ -9,6 +9,11 @@
     cursor: pointer;
     align-items: center;
     justify-content: center;
+    transition: background-color 0.3s ease;
+}
+
+.auth-submit-button:hover {
+  background-color: #0056b3;
 }
 
 .authorization-page-text {
