--- a/client/src/page/trails/TrailPage.css
+++ b/client/src/page/trails/TrailPage.css
@@ -9,6 +9,10 @@
     color: #333;
   }
   
+.trail-page-text {
+  color: rgb(24, 224, 217);
+}
+
   /* Заголовки страницы */
   .isTrailPage h1 {
     font-size: 32px;
@@ -23,6 +27,7 @@
   
   /* Кнопка "назад" */
   .button1 {
+    display: flex;
     text-align: right;
     margin-bottom: 20px;
   }
@@ -30,7 +35,7 @@
   .button1 button {
     padding: 10px 20px;
     font-size: 16px;
-    background-color: #007bff;
+    background-color: #008000;
     color: white;
     border: none;
     border-radius: 4px;
@@ -48,13 +53,9 @@
     gap: 20px;
   }
   
-  .isComment {
-    flex: 1;
-  }
-  
   .isComment .commentHeader {
     font-size: 24px;
-    color: #007bff;
+    color: rgb(24, 224, 217);
     margin-bottom: 10px;
   }
   
@@ -138,12 +139,12 @@
   .isComment {
     flex: 1;
     overflow-y: auto; /* Добавляем скролл по вертикали при необходимости */
-    max-height: 300px; /* Максимальная высота блока с комментариями */
+    max-height: 400px; /* Максимальная высота блока с комментариями */
   }
   
   .isComment .commentHeader {
     font-size: 24px;
-    color: #007bff;
+    color: rgb(24, 224, 217);
     margin-bottom: 10px;
   }
   
