--- a/client/src/page/trails/TrailsItem.css
+++ b/client/src/page/trails/TrailsItem.css
@@ -40,4 +40,7 @@
     font-size: 20px;
     font-weight: 600;
     cursor: pointer;
+    align-items: center;
+    justify-content: center;
+    transition: background-color 0.3s ease;
 }
