--- a/client/src/page/trails/TrailsItem.css
+++ b/client/src/page/trails/TrailsItem.css
@@ -41,3 +41,20 @@
     font-weight: 600;
     cursor: pointer;
 }
+.route-card-button-delete {
+    width: 150px;
+    height: 50px;
+    border: none;
+    border-radius: 5px;
+    background-color: red;
+    color: white;
+    font-size: 20px;
+    font-weight: 600;
+    cursor: pointer;
+    margin-top: 10px;
+  }
+
+  .route-card-button-delete :hover {
+    background-color: #0056b3;
+  }
+  
