--- a/client/src/page/trails/TrailPage.css
+++ b/client/src/page/trails/TrailPage.css
@@ -88,8 +88,19 @@
     border-top: 1px solid #ddd;
   }
   
+.rating-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  
+}
+  
   .rating {
-    font-size: 18px;
+    background-color: rgba(4, 36, 41, 0.7);
+    width: 170px;
+    border-radius: 20px;
+    color: white;
+    font-size: 25px;
     margin-top: 20px;
   }
   
@@ -166,3 +177,27 @@
     color: #666;
   }
 
+  .review-card-button-delete {
+    width: 100px;
+    height: 35px;
+    border: none;
+    border-radius: 5px;
+    background-color: red;
+    color: white;
+    font-size: 16px;
+    font-weight: 600;
+    cursor: pointer;
+    margin-top: 10px;
+  }
+
+  .review-card-button-delete:hover {
+    background-color: #0056b3;
+  }
+  .elCommentMap:hover button {
+    cursor: pointer;
+    display: block;
+  }
+  
+  .elCommentMap button {
+    display: none;
+  }
